src/tests/snapshots/cargo_vet__tests__crate_policies__features-excluded-implied-fail.snap
---
source: src/tests/crate_policies.rs
expression: "format!(\"{:?}\", miette::Report::new(e))"
---
  × There are some issues with your policy entries

Error:   × Excluded features for root:10.0.0 are required by non-excluded features
  │   third-party (required by feat)
  help: Also add these features to `exclude-features`

