src/tests/snapshots/cargo_vet__tests__crate_policies__features-excluded-unknown.snap
---
source: src/tests/crate_policies.rs
expression: "format!(\"{:?}\", miette::Report::new(e))"
---
  × There are some issues with your policy entries

Error:   × Unknown excluded features for root:10.0.0
  │   unknown-feature
  help: Remove the features from `exclude-features`

