src/tests/snapshots/cargo_vet__tests__crate_policies__features-non-workspace-excluded.snap
---
source: src/tests/crate_policies.rs
expression: "format!(\"{:?}\", miette::Report::new(e))"
---
  × There are some issues with your policy entries

Error:   × Policy entry for non-workspace third-party:10.0.0 excludes features
  help: Policy `exclude-features` is only valid for workspace crates

